<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="@dimen/dclf_card_view_margin">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    card_view:srcCompat="@drawable/ic_settings_phone_black_48dp"
                    android:id="@+id/dcf_contact_image"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/dcf_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dcf_name"
                    android:layout_weight="2"
                    android:textSize="22sp"/>
            </LinearLayout>

            <TextView
                android:text="@string/dcf_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dcf_phone_number"
                android:textSize="20sp"
                android:layout_margin="@dimen/dcf_additional_text_view_margin"/>

            <TextView
                android:text="@string/dcf_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dcf_email"
                android:textSize="20sp"
                android:layout_margin="@dimen/dcf_additional_text_view_margin"/>

            <TextView
                android:text="@string/dcf_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dcf_address"
                android:textSize="20sp"
                android:layout_margin="@dimen/dcf_additional_text_view_margin"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
